--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".navigate.ToDoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".fragment.Main3Activity"
+            android:name=".Main3Activity"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".navigation.MainActivity"
@@ -27,11 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".AlarmReceiver"
-            android:enabled="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.BOOT_COMPLETED"/>-->
-<!--            </intent-filter>-->
+
+        <receiver
+            android:name="com.example.loginpage.fragment.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+            </intent-filter>
         </receiver>
     </application>
 
